--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "stack:up": "turbo stack:up",
     "stack:down": "turbo stack:down",
-    "stack:stop": "turbo stack:stop"
+    "stack:stop": "turbo stack:stop",
+    "syncpack": "syncpack"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
+    "syncpack": "^13.0.0",
     "turbo": "^2.1.1",
     "typescript": "^5.4.5"
   },
