--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "stack:up": "turbo stack:up",
+    "sort-package-json": "sort-package-json package.json \"apps/**/package.json\" \"packages/**/package.json\"",
     "stack:down": "turbo stack:down",
     "stack:stop": "turbo stack:stop",
+    "stack:up": "turbo stack:up",
     "syncpack": "syncpack"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
+    "sort-package-json": "^2.10.1",
     "syncpack": "^13.0.0",
     "turbo": "^2.1.1",
     "typescript": "^5.4.5"
