--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write --cache .",
     "sort-package-json": "sort-package-json package.json \"apps/**/package.json\" \"packages/**/package.json\"",
     "stack:down": "turbo stack:down",
     "stack:stop": "turbo stack:stop",
