share payload instance across mono

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -2,6 +2,7 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.ts",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -17,7 +18,8 @@
     "next": "15.0.0-canary.136",
     "payload": "beta",
     "react": "19.0.0-rc-7771d3a7-20240827",
-    "react-dom": "19.0.0-rc-7771d3a7-20240827"
+    "react-dom": "19.0.0-rc-7771d3a7-20240827",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
