--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,16 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "main": "dist/main.cjs.js",
-  "module": "dist/main.esm.js",
+  "module": "dist/main.js",
   "types": "dist/main.d.ts",
+  "exports": {
+    "./globals.css": "./dist/globals.css",
+    "./*": "./dist/*.js"
+  },
   "scripts": {
     "build": "rollup -c",
     "dev": "pnpm build --watch"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "lucide-react": "^0.437.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
@@ -27,6 +34,7 @@
     "react": "18",
     "react-dom": "18",
     "rollup": "^4.21.2",
+    "rollup-plugin-banner2": "^1.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.4.10",
