--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,15 +2,14 @@
   "name": "@repo/ui",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/main.cjs.js",
-  "module": "dist/main.js",
-  "types": "dist/main.d.ts",
   "exports": {
-    "./globals.css": "./dist/globals.css",
+    "./style.css": "./dist/style.css",
     "./*": "./dist/*.js"
   },
+  "module": "dist/main.js",
+  "types": "dist/main.d.ts",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rimraf dist && vite build",
     "dev": "pnpm build --watch"
   },
   "dependencies": {
@@ -25,21 +24,18 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8.4.41",
+    "@vitejs/plugin-react": "^4.3.1",
     "react": "18",
     "react-dom": "18",
-    "rollup": "^4.21.2",
-    "rollup-plugin-banner2": "^1.3.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
+    "rimraf": "^6.0.1",
+    "rollup-plugin-preserve-directives": "^0.4.0",
     "tailwindcss": "^3.4.10",
-    "tslib": "^2.7.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vite": "^5.4.2",
+    "vite-plugin-dts": "^4.1.0",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "peerDependencies": {
     "react": ">=18",
