--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,8 +34,7 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.4.5",
     "vite": "^5.4.2",
-    "vite-plugin-dts": "^4.1.0",
-    "vite-tsconfig-paths": "^5.0.1"
+    "vite-plugin-dts": "^4.1.0"
   },
   "peerDependencies": {
     "react": ">=18",
