--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,16 +10,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "beta",
     "@payloadcms/next": "beta",
-    "@payloadcms/plugin-cloud": "beta",
-    "@payloadcms/richtext-lexical": "beta",
+    "@repo/payload-config": "workspace:*",
     "graphql": "^16.8.1",
     "next": "15.0.0-canary.136",
-    "payload": "beta",
     "react": "19.0.0-rc-7771d3a7-20240827",
-    "react-dom": "19.0.0-rc-7771d3a7-20240827",
-    "sharp": "^0.33.5"
+    "react-dom": "19.0.0-rc-7771d3a7-20240827"
   },
   "devDependencies": {
     "@types/node": "^20",
