--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@repo/payload-config": "workspace:*",
     "@repo/ui": "workspace:*",
-    "admin": "workspace:*",
     "next": "15.0.0-canary.136",
     "react": "19.0.0-rc-7771d3a7-20240827",
     "react-dom": "19.0.0-rc-7771d3a7-20240827",
