--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev --port=3001",
@@ -14,6 +15,7 @@
     "@repo/payload-config": "workspace:*",
     "graphql": "^16.8.1",
     "next": "15.0.0-canary.136",
+    "payload": "3.0.0-beta.97",
     "react": "19.0.0-rc-7771d3a7-20240827",
     "react-dom": "19.0.0-rc-7771d3a7-20240827"
   },
@@ -21,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5"
